--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "backend-nave",
   "version": "1.0.0",
-  "description": "",
+  "description": "Projeto teste para vaga de back end da empresa NAVE",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mathus Kroning dos Santos",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -18,6 +19,7 @@
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@types/yup": "^0.29.11",
     "nodemon": "^2.0.7"
   }
 }
